--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/descuentos-direccion-tecnica/descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/descuentos-direccion-tecnica/descuentos-direccion-tecnica.component.html
@@ -98,17 +98,17 @@
                             </div>
                         </section>
                         <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-                            <mat-card class="shipping-card border" align="left">
+                            <mat-card class="shipping-card border" align="left" *ngIf="descuento.get( 'observacionVerificar' ).value !== null">
                                 <mat-card-header class="header-card">
                                   <mat-card-title class="header-card--text card-title-detalle">
                                     Verificación de la coordinación financiera
                                   </mat-card-title>
                                 </mat-card-header>
                                 <mat-card-content>
-                                    <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a descuento 1?</b>: Si</p>
-                                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a descuento 1?</b>: No</p>
-                                    <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                                    <p style="margin-left: 2em;"><b> {{ descuento.get( 'observacionVerificar' ).value.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'observacionVerificar' ).value.tieneObservacion === true"><b>¿Desde la dirección financiera tiene observaciones al descuento {{ i + 1 }}?</b>: Si</p>
+                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'observacionVerificar' ).value.tieneObservacion === false"><b>¿Desde la dirección financiera tiene observaciones al descuento {{ i + 1 }}?</b>: No</p>
+                                    <section [innerHTML]="descuento.get( 'observacionVerificar' ).value.observacion" style="margin-left: 2em;" *ngIf="descuento.get( 'observacionVerificar' ).value.tieneObservacion === true"></section>
                                 </mat-card-content>
                             </mat-card>
             
@@ -119,10 +119,10 @@
                                   </mat-card-title>
                                 </mat-card-header>
                                 <mat-card-content>
-                                    <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                                    <p style="margin-left: 2em;"><b>¿¿Desde la dirección financiera tiene observaciones a descuento 1?</b>: Si</p>
-                                    <p style="margin-left: 2em;"><b>¿¿Desde la dirección financiera tiene observaciones a descuento 1?</b>: No</p>
-                                    <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                                    <p style="margin-left: 2em;"><b> {{ descuento.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'tieneObservaciones' ).value === true"><b>¿Desde la dirección financiera tiene observaciones al descuento {{ i + 1 }}?</b>: Si</p>
+                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'tieneObservaciones' ).value === false"><b>¿Desde la dirección financiera tiene observaciones al descuento {{ i + 1 }}?</b>: No</p>
+                                    <section [innerHTML]="descuento.get( 'observaciones' ).value" style="margin-left: 2em;" *ngIf="descuento.get( 'tieneObservaciones' ).value === true"></section>
                                 </mat-card-content>
                             </mat-card>
                         </ng-container>
@@ -134,10 +134,10 @@
                                   </mat-card-title>
                                 </mat-card-header>
                                 <mat-card-content>
-                                    <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a descuento 1?</b>: Si</p>
-                                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a descuento 1?</b>: No</p>
-                                    <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                                    <p style="margin-left: 2em;"><b> {{ descuento.get( 'observacionVerificar' ).value.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'observacionVerificar' ).value.tieneObservacion === true"><b>¿Desde la dirección financiera tiene observaciones al descuento {{ i + 1 }}?</b>: Si</p>
+                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'observacionVerificar' ).value.tieneObservacion === false"><b>¿Desde la dirección financiera tiene observaciones al descuento {{ i + 1 }}?</b>: No</p>
+                                    <section [innerHTML]="descuento.get( 'observacionVerificar' ).value.observacion" style="margin-left: 2em;" *ngIf="descuento.get( 'observacionVerificar' ).value.tieneObservacion === true"></section>
                                 </mat-card-content>
                             </mat-card>
 
@@ -192,31 +192,42 @@
                                   </span>
                             </div>
                             <div class="text-center mt-1em">
-                                <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="descuento.get('tieneObservaciones').value === null">
-                                    <img src="assets/img/icon/guardar.svg">
+                                <button mat-button
+                                        color="warn"
+                                        class="btn-guardar"
+                                        (click)="guardar( descuento )"
+                                        type="button"
+                                        [disabled]="descuento.dirty === false">
+                                        <img src="assets/img/icon/guardar.svg">
                                 </button>
                             </div>
                 
-                            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
-                                <table mat-table [dataSource]="tablaHistorial" matSort>
-                              
+                            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="descuento.get( 'historialObservaciones' ).value.length > 0">
+                                <table mat-table [dataSource]="getDataSource( descuento.get( 'historialObservaciones' ).value )" matSort>
+
                                     <ng-container matColumnDef="fechaRevision">
                                       <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
                                       <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
                                     </ng-container>
-                              
+
                                     <ng-container matColumnDef="responsable">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                                        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.responsable }} </td>
+                                        <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                            <div [ngSwitch]="element.menuId">
+                                                <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                                                <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                                                <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                                            </div>
+                                        </td>
                                     </ng-container>
-                              
+
                                     <ng-container matColumnDef="historial">
                                       <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
                                       <td mat-cell *matCellDef="let element" align="center" class="color-text">
                                           <section [innerHTML]="element.observacion"></section>
                                       </td>
                                     </ng-container>
-                                
+
                                   <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
                                   <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
                                 </table>
