--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/observaciones/observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/observaciones/observaciones.component.html
@@ -6,22 +6,22 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content align="left">
-            <section *ngIf="solicitudPago.ordenGiro.ordenGiroDetalle[ 0 ].ordenGiroDetalleObservacion.length > 0" class="mt-1em" [innerHTML]="solicitudPago.ordenGiro.ordenGiroDetalle[ 0 ].ordenGiroDetalleObservacion[ 0 ].observacion"></section>
+            <section style="margin-left: 2em;" *ngIf="solicitudPago.ordenGiro.ordenGiroDetalle[ 0 ].ordenGiroDetalleObservacion.length > 0" class="mt-1em" [innerHTML]="solicitudPago.ordenGiro.ordenGiroDetalle[ 0 ].ordenGiroDetalleObservacion[ 0 ].observacion"></section>
         </mat-card-content>
     </mat-card>
 
     <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-        <mat-card class="shipping-card border" align="left">
+        <mat-card class="shipping-card border" align="left" *ngIf="observacionVerificar !== undefined">
             <mat-card-header class="header-card">
-              <mat-card-title class="header-card--text card-title-detalle">
-                Verificación de la coordinación financiera
-              </mat-card-title>
+                <mat-card-title class="header-card--text card-title-detalle">
+                    Verificación de la coordinación financiera
+                </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: Si</p>
-                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: No</p>
-                <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                <p style="margin-left: 2em;"><b> {{ observacionVerificar.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                <p style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === true"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: Si</p>
+                <p style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === false"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: No</p>
+                <section [innerHTML]="observacionVerificar.observacion" style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === true"></section>
             </mat-card-content>
         </mat-card>
 
@@ -32,25 +32,25 @@
               </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                <p style="margin-left: 2em;"><b>¿Desde la dirección financiera tiene observaciones a esta sección de la orden de giro?</b>: Si</p>
-                <p style="margin-left: 2em;"><b>¿Desde la dirección financiera tiene observaciones a esta sección de la orden de giro?</b>: No</p>
-                <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                <p style="margin-left: 2em;"><b> {{ formObservacion.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"><b>¿Desde la dirección financiera tiene observaciones a esta sección de la orden de giro?</b>: Si</p>
+                <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === false"><b>¿Desde la dirección financiera tiene observaciones a esta sección de la orden de giro?</b>: No</p>
+                <section [innerHTML]="formObservacion.get( 'observaciones' ).value" style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"></section>
             </mat-card-content>
         </mat-card>
     </ng-container>
     <ng-template #noEsVerDetalle>
-        <mat-card class="shipping-card border" align="left">
+        <mat-card class="shipping-card border" align="left" *ngIf="observacionVerificar !== undefined">
             <mat-card-header class="header-card">
-              <mat-card-title class="header-card--text card-title-detalle">
-                Verificación de la coordinación financiera
-              </mat-card-title>
+                <mat-card-title class="header-card--text card-title-detalle">
+                    Verificación de la coordinación financiera
+                </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: Si</p>
-                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: No</p>
-                <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                <p style="margin-left: 2em;"><b> {{ observacionVerificar.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                <p style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === true"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: Si</p>
+                <p style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === false"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: No</p>
+                <section [innerHTML]="observacionVerificar.observacion" style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === true"></section>
             </mat-card-content>
         </mat-card>
 
@@ -106,13 +106,13 @@
                   </span>
             </div>
             <div class="text-center mt-1em">
-                <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formObservacion.get('tieneObservaciones').value === null">
+                <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formObservacion.dirty === false">
                     <img src="assets/img/icon/guardar.svg">
                 </button>
             </div>
         </form>
 
-        <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
+        <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="historialObservaciones.length > 0">
             <table mat-table [dataSource]="tablaHistorial" matSort>
           
                 <ng-container matColumnDef="fechaRevision">
@@ -122,7 +122,13 @@
           
                 <ng-container matColumnDef="responsable">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                    <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.responsable }} </td>
+                    <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                        <div [ngSwitch]="element.menuId">
+                            <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                            <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                            <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                        </div>
+                    </td>
                 </ng-container>
           
                 <ng-container matColumnDef="historial">
