--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/tercero-causacion/tercero-causacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/tercero-causacion/tercero-causacion.component.html
@@ -66,17 +66,17 @@
                     </mat-card>
 
                     <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-                        <mat-card class="shipping-card border" align="left">
+                        <mat-card class="shipping-card border" align="left" *ngIf="criterio.get( 'observacionVerificar' ).value !== null">
                             <mat-card-header class="header-card">
                               <mat-card-title class="header-card--text card-title-detalle">
                                 Verificación de la coordinación financiera
                               </mat-card-title>
                             </mat-card-header>
                             <mat-card-content>
-                                <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a costo variable?</b>: Si</p>
-                                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a costo variable?</b>: No</p>
-                                <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                                <p style="margin-left: 2em;"><b> {{ criterio.get( 'observacionVerificar' ).value.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                                <p style="margin-left: 2em;" *ngIf="criterio.get( 'observacionVerificar' ).value.tieneObservacion === true"><b>¿Desde la coordinación financiera tiene observaciones a {{ firstLetterUpperCase( criterio.get( 'nombre' ).value ) }}?</b>: Si</p>
+                                <p style="margin-left: 2em;" *ngIf="criterio.get( 'observacionVerificar' ).value.tieneObservacion === false"><b>¿Desde la coordinación financiera tiene observaciones a {{ firstLetterUpperCase( criterio.get( 'nombre' ).value ) }}?</b>: No</p>
+                                <section [innerHTML]="criterio.get( 'observacionVerificar' ).value.observacion" style="margin-left: 2em;" *ngIf="criterio.get( 'observacionVerificar' ).value.tieneObservacion === true"></section>
                             </mat-card-content>
                         </mat-card>
         
@@ -87,25 +87,25 @@
                               </mat-card-title>
                             </mat-card-header>
                             <mat-card-content>
-                                <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                                <p style="margin-left: 2em;"><b>¿Desde la dirección financiera tiene observaciones a costo variable?</b>: Si</p>
-                                <p style="margin-left: 2em;"><b>¿Desde la dirección financiera tiene observaciones a costo variable?</b>: No</p>
-                                <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                                <p style="margin-left: 2em;"><b> {{ criterio.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                                <p style="margin-left: 2em;" *ngIf="criterio.get( 'tieneObservaciones' ).value === true"><b>¿Desde la dirección financiera tiene observaciones a {{ firstLetterUpperCase( criterio.get( 'nombre' ).value ) }}?</b>: Si</p>
+                                <p style="margin-left: 2em;" *ngIf="criterio.get( 'tieneObservaciones' ).value === false"><b>¿Desde la dirección financiera tiene observaciones a {{ firstLetterUpperCase( criterio.get( 'nombre' ).value ) }}?</b>: No</p>
+                                <section [innerHTML]="criterio.get( 'observaciones' ).value" style="margin-left: 2em;" *ngIf="criterio.get( 'tieneObservaciones' ).value === true"></section>
                             </mat-card-content>
                         </mat-card>
                     </ng-container>
                     <ng-template #noEsVerDetalle>
-                        <mat-card class="shipping-card border" align="left">
+                        <mat-card class="shipping-card border" align="left" *ngIf="criterio.get( 'observacionVerificar' ).value !== null">
                             <mat-card-header class="header-card">
                               <mat-card-title class="header-card--text card-title-detalle">
                                 Verificación de la coordinación financiera
                               </mat-card-title>
                             </mat-card-header>
                             <mat-card-content>
-                                <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a costo variable?</b>: Si</p>
-                                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a costo variable?</b>: No</p>
-                                <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                                <p style="margin-left: 2em;"><b> {{ criterio.get( 'observacionVerificar' ).value.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                                <p style="margin-left: 2em;" *ngIf="criterio.get( 'observacionVerificar' ).value.tieneObservacion === true"><b>¿Desde la coordinación financiera tiene observaciones a {{ firstLetterUpperCase( criterio.get( 'nombre' ).value ) }}?</b>: Si</p>
+                                <p style="margin-left: 2em;" *ngIf="criterio.get( 'observacionVerificar' ).value.tieneObservacion === false"><b>¿Desde la coordinación financiera tiene observaciones a {{ firstLetterUpperCase( criterio.get( 'nombre' ).value ) }}?</b>: No</p>
+                                <section [innerHTML]="criterio.get( 'observacionVerificar' ).value.observacion" style="margin-left: 2em;" *ngIf="criterio.get( 'observacionVerificar' ).value.tieneObservacion === true"></section>
                             </mat-card-content>
                         </mat-card>
 
@@ -160,35 +160,45 @@
                                   </span>
                             </div>
                             <div class="text-center mt-1em">
-                                <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="criterio.get('tieneObservaciones').value === null">
+                                <button mat-button
+                                        color="warn" class="btn-guardar"
+                                        type="button"
+                                        (click)="guardar( criterio )"
+                                        [disabled]="criterio.dirty === false">
                                     <img src="assets/img/icon/guardar.svg">
                                 </button>
                             </div>
             
-                        <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
-                            <table mat-table [dataSource]="tablaHistorial" matSort>
-                          
-                                <ng-container matColumnDef="fechaRevision">
-                                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
-                                  <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
-                                </ng-container>
-                          
-                                <ng-container matColumnDef="responsable">
-                                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                                    <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.responsable }} </td>
-                                </ng-container>
-                          
-                                <ng-container matColumnDef="historial">
-                                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
-                                  <td mat-cell *matCellDef="let element" align="center" class="color-text">
-                                      <section [innerHTML]="element.observacion"></section>
-                                  </td>
-                                </ng-container>
-                            
-                              <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
-                              <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
-                            </table>
-                        </section>
+                            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="criterio.get( 'historialObservaciones' ).value.length > 0">
+                                <table mat-table [dataSource]="getDataSource( criterio.get( 'historialObservaciones' ).value )" matSort>
+
+                                    <ng-container matColumnDef="fechaRevision">
+                                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
+                                      <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                                    </ng-container>
+
+                                    <ng-container matColumnDef="responsable">
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
+                                        <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                            <div [ngSwitch]="element.menuId">
+                                                <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                                                <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                                                <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                                            </div>
+                                        </td>
+                                    </ng-container>
+
+                                    <ng-container matColumnDef="historial">
+                                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
+                                      <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                          <section [innerHTML]="element.observacion"></section>
+                                      </td>
+                                    </ng-container>
+
+                                  <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
+                                  <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
+                                </table>
+                            </section>
                     </ng-template>
             </mat-expansion-panel> 
         </mat-accordion>
