--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/descuentos-direccion-tecnica/descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/descuentos-direccion-tecnica/descuentos-direccion-tecnica.component.html
@@ -105,10 +105,10 @@
                                   </mat-card-title>
                                 </mat-card-header>
                                 <mat-card-content>
-                                    <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                                    <p style="margin-left: 2em;"><b>¿Desde la fiduciaria tiene observaciones a los descuentos Dirección Técnica de este tipo de pago?</b>: Si</p>
-                                    <p style="margin-left: 2em;"><b>¿Desde la fiduciaria tiene observaciones a los descuentos Dirección Técnica de este tipo de pago?</b>: No</p>
-                                    <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                                    <p style="margin-left: 2em;"><b> {{ descuento.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'tieneObservaciones' ).value === true"><b>¿Desde la fiduciaria tiene observaciones al descuento {{ i + 1 }}?</b>: Si</p>
+                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'tieneObservaciones' ).value === false"><b>¿Desde la fiduciaria tiene observaciones al descuento {{ i + 1 }}?</b>: No</p>
+                                    <section [innerHTML]="descuento.get( 'observaciones' ).value" style="margin-left: 2em;" *ngIf="descuento.get( 'tieneObservaciones' ).value === true"></section>
                                 </mat-card-content>
                             </mat-card>
                         </ng-container>
@@ -118,7 +118,7 @@
                                 <div class="col-md-12">
                                     <div class="row justify-content-center align-items-center" style="width: 100%;">
                                         <div class="pr-1">
-                                            <label class="label-left" for="tieneObservaciones">¿¿Desde la fiduciaria tiene observaciones al descuento {{ i + 1 }}?</label>
+                                            <label class="label-left" for="tieneObservaciones">¿Desde la fiduciaria tiene observaciones al descuento {{ i + 1 }}?</label>
                                         </div>
                                         <div>
                                             <mat-radio-group class="radioInput" formControlName="tieneObservaciones">
@@ -165,13 +165,18 @@
                                   </span>
                             </div>
                             <div class="text-center mt-1em">
-                                <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="descuento.get('tieneObservaciones').value === null">
+                                <button mat-button
+                                        color="warn"
+                                        class="btn-guardar"
+                                        (click)="guardar( descuento )"
+                                        type="button"
+                                        [disabled]="descuento.dirty === false">
                                     <img src="assets/img/icon/guardar.svg">
                                 </button>
                             </div>
                 
-                            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
-                                <table mat-table [dataSource]="tablaHistorial" matSort>
+                            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="descuento.get( 'historialObservaciones' ).value.length > 0">
+                                <table mat-table [dataSource]="getDataSource( descuento.get( 'historialObservaciones' ).value )" matSort>
                               
                                     <ng-container matColumnDef="fechaRevision">
                                       <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
@@ -180,7 +185,13 @@
                               
                                     <ng-container matColumnDef="responsable">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                                        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.responsable }} </td>
+                                        <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                            <div [ngSwitch]="element.menuId">
+                                                <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                                                <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                                                <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                                            </div>
+                                        </td>
                                     </ng-container>
                               
                                     <ng-container matColumnDef="historial">
