--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/descuentos-direccion-tecnica/descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/descuentos-direccion-tecnica/descuentos-direccion-tecnica.component.html
@@ -184,7 +184,13 @@
                               
                                     <ng-container matColumnDef="responsable">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                                        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.responsable }} </td>
+                                        <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                            <div [ngSwitch]="element.menuId">
+                                                <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                                                <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                                                <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                                            </div>
+                                        </td>
                                     </ng-container>
                               
                                     <ng-container matColumnDef="historial">
