--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/dialog-enviar-aprobacion/dialog-enviar-aprobacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/dialog-enviar-aprobacion/dialog-enviar-aprobacion.component.html
@@ -7,9 +7,9 @@
 </div>
 
 <div class="d-flex justify-content-center mt-1em colorMainColor">
-    <p>Número de orden de giro: <b> ODG_Obr 001 </b></p>
-    <p style="margin-left: 2em;">Modalidad de contrato: <b>Tipo B</b></p>
-    <p style="margin-left: 2em;">Número de contrato: <b>N801801</b></p>
+    <p>Número de orden de giro: <b> {{ data.numeroSolicitudOrdenGiro }} </b></p>
+    <p style="margin-left: 2em;">Modalidad de contrato: <b> {{ data.modalidad }} </b></p>
+    <p style="margin-left: 2em;">Número de contrato: <b> {{ data.numeroContrato }} </b></p>
 </div>
 
 <section class="container text-center mt-3em" style="width: 95%;">
