--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/observaciones-orden-giro-gog/observaciones-orden-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/observaciones-orden-giro-gog/observaciones-orden-giro-gog.component.html
@@ -47,9 +47,11 @@
                 />
               </span>
         </div>
-        <button mat-button color="warn" class="btn-guardar"
-            type="submit">
-            <img src="assets/img/icon/guardar.svg" alt="Guardar">
+        <button mat-button color="warn"
+                class="btn-guardar"
+                type="submit"
+                [disabled]="addressForm.dirty === false">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
         </button>
     </form>
 </ng-template>
