--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -210,8 +210,10 @@
                                                                 <input  matInput
                                                                         #valorDescuento
                                                                         maxlength="20"
-                                                                        type="number"
                                                                         required
+                                                                        currencyMask
+                                                                        [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
+                                                                        (ngModelChange)="validateDiscountAportanteValue( $event, i, j, k )"
                                                                         formControlName="valorDescuento"
                                                                         onKeyPress="if(this.value.length>=this.maxLength) return false;">
                                                             </mat-form-field>
@@ -270,11 +272,11 @@
                                                 <div class="col-md-8">
                                                     <div class="row">
                                                         <div class="pr-1">
-                                                            <label class="label-left" for="aplicaDescuentos" [ngClass]="{
-                                                                'color-secondaryColor':
-                                                                  (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').touched) ||
-                                                                  (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && estaEditando)
-                                                              }">¿Se requieren aplicar descuentos sobre el concepto de pago?</label>
+                                                            <label class="label-left"
+                                                                    for="aplicaDescuentos"
+                                                                    [ngClass]="{ 'color-secondaryColor': (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').touched) || (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && estaEditando) }">
+                                                                    ¿Se requieren aplicar descuentos sobre el concepto de pago?
+                                                            </label>
                                                         </div>
                                                         <div class="col">
                                                             <mat-radio-group class="radioInput" formControlName="aplicaDescuentos" required>
@@ -284,26 +286,23 @@
                                                             <span class="required-form-group" style="margin-left: 1px;">*</span>
                                                         </div>
                                                         <span class="icon-incompleto">
-                                                            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                                                                alt="este campo es requerido" [matTooltipPosition]="'above'"
-                                                                matTooltip="Debe ingresar la información en el campo para continuar"
-                                                                matTooltipClass="info-tooltip" *ngIf="
-                                                                (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').touched) ||
-                                                                  (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && estaEditando)
-                                                              " />
+                                                            <img    class="icon-incompleto--img"
+                                                                    src="assets/img/icon/incompleto.svg"
+                                                                    alt="este campo es requerido"
+                                                                    [matTooltipPosition]="'above'"
+                                                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                                                    matTooltipClass="info-tooltip"
+                                                                    *ngIf="(getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').touched) || (getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').invalid && estaEditando)">
                                                         </span>
                                                     </div>
                                                 </div>
                                             </div>
     
                                             <div class="d-flex mt-1em animatedDown" *ngIf="getConceptos( i ).controls[ j ].get( 'descuento' ).get('aplicaDescuentos').value === true">
-                                                <label class="mr-label" class="label-left"
-                                                [ngClass]="{
-                                                    'color-secondaryColor':
-                                                      (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').touched) ||
-                                                      (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && estaEditando)
-                                                  }"><b>¿Cuántos descuentos se aplican sobre el concepto de
-                                                        pago?</b></label>
+                                                <label  class="mr-label label-left"
+                                                        [ngClass]="{ 'color-secondaryColor': (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').touched) || (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && estaEditando) }">
+                                                        <b>¿Cuántos descuentos se aplican sobre el concepto de pago?</b>
+                                                </label>
                                                 <div class="col d-flex">
                                                     <mat-form-field class="w-25">
                                                         <input  matInput
@@ -319,18 +318,13 @@
                                                     <span class="contador">{{2 - numeroDescuento.value.length}}</span>
                                                 </div>
                                                 <span class="icon-incompleto">
-                                                    <img
-                                                      class="icon-incompleto--img"
-                                                      src="assets/img/icon/incompleto.svg"
-                                                      alt="este campo es requerido"
-                                                      [matTooltipPosition]="'above'"
-                                                      matTooltip="Debe ingresar la información en el campo para continuar"
-                                                      matTooltipClass="info-tooltip"
-                                                      *ngIf="
-                                                        (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').touched) ||
-                                                        (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && estaEditando)
-                                                      "
-                                                    />
+                                                    <img    class="icon-incompleto--img"
+                                                            src="assets/img/icon/incompleto.svg"
+                                                            alt="este campo es requerido"
+                                                            [matTooltipPosition]="'above'"
+                                                            matTooltip="Debe ingresar la información en el campo para continuar"
+                                                            matTooltipClass="info-tooltip"
+                                                            *ngIf="(getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').touched) || (getConceptos( i ).controls[ j ].get( 'descuento' ).get('numeroDescuentos').invalid && estaEditando)">
                                                   </span>
                                             </div>
     
@@ -368,17 +362,23 @@
                                                                     </div>
                                                                     <div class="col d-flex">
                                                                         <mat-form-field class="full-width w-75">
-                                                                            <input matInput #valorDescuento currencyMask maxlength="20" required
-                                                                                formControlName="valorDescuento"
-                                                                                (keypress)="validateNumberKeypress($event)"
-                                                                                onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                                                                                oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
-                                                                                [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
+                                                                            <input  matInput
+                                                                                    #valorDescuento
+                                                                                    currencyMask
+                                                                                    maxlength="20"
+                                                                                    required
+                                                                                    formControlName="valorDescuento"
+                                                                                    (keypress)="validateNumberKeypress($event)"
+                                                                                    onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                                                                    (ngModelChange)="validateDiscountValue( $event, i, j , k )"
+                                                                                    oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                                                                                    [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                                                         </mat-form-field>
-                                                                        <span class="contador" [matTooltipPosition]="'above'"
-                                                                            matTooltip="Valor en ($) Pesos colombianos"
-                                                                            matTooltipClass="info-tooltip">{{20 -
-                                                                            valorDescuento.value.length}}</span>
+                                                                        <span   class="contador"
+                                                                                [matTooltipPosition]="'above'"
+                                                                                matTooltip="Valor en ($) Pesos colombianos"
+                                                                                matTooltipClass="info-tooltip">{{20 - valorDescuento.value.length}}
+                                                                        </span>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -398,8 +398,12 @@
                             </mat-card-content>
                         </mat-card>
                         <div class="text-center mb-2em">
-                            <button mat-button color="warn" class="btn-guardar" type="submit">
-                                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                            <button mat-button
+                                    color="warn"
+                                    class="btn-guardar"
+                                    [disabled]="criterio.dirty === false"
+                                    type="submit">
+                                    <img src="assets/img/icon/guardar.svg" alt="Regresar">
                             </button>
                         </div>
                 </mat-expansion-panel> 
