carga ajuste programación

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
@@ -17,8 +17,14 @@
       Programación de obra
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <app-programacion-de-obra></app-programacion-de-obra>
+    <app-programacion-de-obra
+                              [ajusteProgramacionInfo]="ajusteProgramacionInfo"
+    >
+
+    </app-programacion-de-obra>
   </mat-expansion-panel>
+
+  
   <mat-expansion-panel class="expansion-style">
     <mat-expansion-panel-header class="expansion-style--header">
       <mat-panel-title class="expansion-style--title" [ngClass]="{
