cargas ajuste programacion ok

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
@@ -36,6 +36,10 @@
       Flujo de inversión de recursos
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <app-flujo-intervencion-recursos></app-flujo-intervencion-recursos>
+    <app-flujo-intervencion-recursos
+                                    [ajusteProgramacionInfo]="ajusteProgramacionInfo"
+    >
+
+    </app-flujo-intervencion-recursos>
   </mat-expansion-panel>
 </mat-accordion>
