--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/flujo-intervencion-recursos/flujo-intervencion-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/flujo-intervencion-recursos/flujo-intervencion-recursos.component.html
@@ -17,7 +17,7 @@
   <button mat-raised-button color="accent" class="tabs--btn">
       Ver documento de registro presupuestal
   </button>
-  <button mat-raised-button color="accent" class="tabs--btn"
+  <button mat-raised-button color="accent" class="tabs--btn" (click)="openCargarFlujo()"
       >
       Cargar flujo de inversión de recursos
   </button>
