--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/validar-ajuste/validar-ajuste.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/validar-ajuste/validar-ajuste.component.html
@@ -102,6 +102,9 @@
   </mat-card>
 
   <div class="mb-2em">
-    <app-expansion-panel></app-expansion-panel>
+    <app-expansion-panel
+                        [ajusteProgramacion]="ajusteProgramacion"
+    >
+  </app-expansion-panel>
   </div>
 </section>
