--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
@@ -17,7 +17,11 @@
       Programación de obra
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <app-programacion-de-obra></app-programacion-de-obra>
+    <app-programacion-de-obra
+                              [ajusteProgramacion]="ajusteProgramacion"
+    >
+
+    </app-programacion-de-obra>
   </mat-expansion-panel>
   <mat-expansion-panel class="expansion-style">
     <mat-expansion-panel-header class="expansion-style--header">
@@ -30,6 +34,10 @@
       Flujo de inversión de recursos
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <app-flujo-intervencion-recursos></app-flujo-intervencion-recursos>
+    <app-flujo-intervencion-recursos
+                                      [ajusteProgramacion]="ajusteProgramacion"
+    >
+
+    </app-flujo-intervencion-recursos>
   </mat-expansion-panel>
 </mat-accordion>
