--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-pasiva-dj/form-convocados-pasiva-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-convocados-pasiva-dj/form-convocados-pasiva-dj.component.html
@@ -41,7 +41,7 @@
                                         'color-secondaryColor':
                                           (perfil.get('nomConvocado').invalid && perfil.get('nomConvocado').touched) ||
                                           (perfil.get('nomConvocado').invalid && estaEditando)
-                                      }">Nombre del demandado</label>
+                                      }">Nombre del convocado</label>
                                 </div>
                                 <div class="col d-flex">
                                     <mat-form-field class="full-width">
@@ -71,7 +71,7 @@
                                           (perfil.get('tipoIdentificacion').invalid && perfil.get('tipoIdentificacion').touched) ||
                                           (perfil.get('tipoIdentificacion').invalid && estaEditando)
                                       }">Tipo de identificación del
-                                        demandado</label>
+                                        convocado</label>
                                 </div>
                                 <div class="col">
                                     <mat-form-field class="select-width">
@@ -104,7 +104,7 @@
                                           (perfil.get('numIdentificacion').invalid && perfil.get('numIdentificacion').touched) ||
                                           (perfil.get('numIdentificacion').invalid && estaEditando)
                                       }">Número de identificación
-                                        demandado</label>
+                                        convocado</label>
                                 </div>
                                 <div class="col d-flex">
                                     <mat-form-field class="full-width">
