--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/control-tabla-proceso-defensa-judicial/control-tabla-proceso-defensa-judicial.component.html
@@ -63,14 +63,14 @@
                 </button>
                 <button mat-raised-button color="accent" class="btn-table"
                     *ngIf="(element.vaAProcesoJudicial && element.estadoProcesoCodigo === '6') || (!element.vaAProcesoJudicial && (element.estadoProcesoCodigo === '1' || element.estadoProcesoCodigo === '3'  || element.estadoProcesoCodigo === '6')) && element.registroCompletoNombre=='Completo'
-                    || (element.estadoProcesoCodigo === '3' && element.cuantiaPerjuicios==null && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '6' && element.registroCompletoNombre=='Completo')"
+                    || (element.estadoProcesoCodigo === '3' && element.cuantiaPerjuicios==null && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '6' && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '9' && element.esprocesoResultadoDefinitivo==false)"
                     (click)="this.actualizarProceso(element.defensaJudicialId)">
                     Actualizar proceso
                 </button>
                 <button mat-raised-button color="accent" class="btn-table"
                     (click)="GetPlantillaDefensaJudicial(element.defensaJudicialId)"
                     *ngIf="(element.estadoProcesoCodigo === '2' && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '6' && element.registroCompletoNombre=='Completo')
-                    || (element.estadoProcesoCodigo === '3' && element.cuantiaPerjuicios==null && element.registroCompletoNombre=='Completo')">
+                    || (element.estadoProcesoCodigo === '3' && element.cuantiaPerjuicios==null && element.registroCompletoNombre=='Completo') || (element.estadoProcesoCodigo === '9' && element.esprocesoResultadoDefinitivo==false)">
                     Descargar ficha de estudio
                 </button>
                 <button mat-raised-button color="accent" class="btn-table"
