--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
@@ -53,7 +53,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
                 <td mat-cell *matCellDef="let element" align="center">
                     <span class="info-text info-text__table"
-                        [ngClass]="{'sin-diligenciar' : element.esCompleto==null, 'completo' : element.esCompleto}"
+                        [ngClass]="{'sin-diligenciar' : element.esCompleto==null || !element.esCompleto, 'completo' : element.esCompleto}"
                         style="margin-right: 0em;"></span>
                     <br>
                     {{ element.esCompleto?"Completo":"Incompleto" }}
