--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/registrar-actualiz-polizas-garantias/registrar-actualiz-polizas-garantias.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/registrar-actualiz-polizas-garantias/registrar-actualiz-polizas-garantias.component.html
@@ -24,70 +24,44 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="pr-1">
-                        <label class="label-left" for="numeroContrato" [class.color-secondaryColor]="
-                      (addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) ||
-                      (addressForm.get('numeroContrato').invalid && estaEditando)
-                    ">
-                            Número de contrato
+                        <label  class="label-left"
+                                for="numeroContrato"
+                                [class.color-secondaryColor]="(addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) || (addressForm.get('numeroContrato').invalid && estaEditando)">
+                                Número de contrato
                         </label>
                     </div>
                     <div class="col d-flex">
                         <mat-form-field class="full-width">
-                            <input matInput #nombre2 type="text" maxlength="10" [formControl]="myFilter" required
-                                [matAutocomplete]="auto2" />
-                            <mat-autocomplete #auto2="matAutocomplete">
-                                <mat-option (click)="seleccionAutocomplete(nombres)"
-                                    *ngFor="let nombres of filteredContrato | async" [value]="nombres">
-                                    {{ nombres }}
-                                </mat-option>
-                            </mat-autocomplete>
+                            <input  matInput
+                                    #numeroContrato
+                                    type="text"
+                                    maxlength="100"
+                                    required
+                                    formControlName="numeroContrato">
                         </mat-form-field>
-                        <button mat-button color="primary" class="busqueda--img">
-                            <img src="assets/img/icon/lupa.svg" alt="Buscar" />
+                        <button mat-button
+                                color="primary"
+                                class="busqueda--img"
+                                type="button"
+                                (click)="getContratos()">
+                                <img src="assets/img/icon/lupa.svg" alt="Buscar">
                         </button>
                     </div>
                     <span class="icon-incompleto">
-                        <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
-                            alt="este campo es requerido" [matTooltipPosition]="'above'"
-                            matTooltip="Debe ingresar la información en el campo para continuar"
-                            matTooltipClass="info-tooltip" *ngIf="
-                      (addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) ||
-                      (addressForm.get('numeroContrato').invalid && estaEditando)
-                    " />
+                        <img    class="icon-incompleto--img"
+                                src="assets/img/icon/incompleto.svg"
+                                alt="este campo es requerido"
+                                [matTooltipPosition]="'above'"
+                                matTooltip="Debe ingresar la información en el campo para continuar"
+                                matTooltipClass="info-tooltip"
+                                *ngIf="(addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) || (addressForm.get('numeroContrato').invalid && estaEditando)">
                     </span>
                 </div>
             </div>
         </div>
     </form>
-    <div *ngIf="this.selectedContract != ''">
-        <div class="table-responsive">
-            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-                <ng-container matColumnDef="numContrato">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de contrrato </th>
-                    <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.numContrato }}</b> </td>
-                </ng-container>
-                <ng-container matColumnDef="tipoContrato">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de contrato </th>
-                    <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.tipoContrato }}</em> </td>
-                </ng-container>
-                <ng-container matColumnDef="contratista">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Contratista </th>
-                    <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.contratista }}</em> </td>
-                </ng-container>
-                <ng-container matColumnDef="gestion">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
-                    <td mat-cell *matCellDef="let element" align="center">
-                        <button mat-raised-button color="accent" class="btn-table"
-                            (click)="this.actualizarPoliza(element.gestion)">
-                            Actualizar póliza
-                        </button>
-                    </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-        </div>
-    </div>
+
+    <app-tabla-lista-contratos *ngIf="listContrato.length > 0" [listContrato]="listContrato"></app-tabla-lista-contratos>
+
     <app-tabla-general-rapg></app-tabla-general-rapg>
 </section>
