fix semaforo ordenGiro :bee:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
@@ -1,4 +1,4 @@
-<section class="container text-center" *ngIf="esRegistroNuevo !== undefined">
+<section class="container text-center" *ngIf="esRegistroNuevo !== undefined && contratoPoliza !== undefined">
     <div class="text-right">
         <a routerLink="/registrarActualizacionesPolizasYGarantias" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
