--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
@@ -7,7 +7,8 @@
         novedadDescripcion.tipoNovedadCodigo == "2" ? 'Prórroga a la Suspensión' :
         novedadDescripcion.tipoNovedadCodigo == "3" ? 'Adición' :
         novedadDescripcion.tipoNovedadCodigo == "4" ? 'Prorroga' :
-        novedadDescripcion.tipoNovedadCodigo == "5" ? 'Modificación de Condiciones Contractuales' : ''
+        novedadDescripcion.tipoNovedadCodigo == "5" ? 'Modificación de Condiciones Contractuales' :
+        novedadDescripcion.tipoNovedadCodigo == "6" ? 'Reinicio' : ''
         }}
       </mat-card-title>
     </mat-card-header>
@@ -83,7 +84,7 @@
         </div>
       </div>
 
-      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2'">
+      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2' || novedadDescripcion.tipoNovedadCodigo === '6'">
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
@@ -107,7 +108,7 @@
           </div>
         </div>
       </div>
-      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2'">
+      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '1' || novedadDescripcion.tipoNovedadCodigo == '2' || novedadDescripcion.tipoNovedadCodigo === '6'">
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
