--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-informe-final/validar-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-informe-final/validar-informe-final.component.html
@@ -118,6 +118,6 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <app-form-observacion-informe-final></app-form-observacion-informe-final>
+  <app-form-observacion-informe-final *ngIf="listaTipoObservacionLiquidacionContratacion && listaMenu && contratacionProyectoId && data" [contratacionProyectoId] = "contratacionProyectoId" [informeFinalId] = "data.informeFinal.informeFinalId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.informeFinal" [menuId]="listaMenu.registrarSolicitudLiquidacionContratacion"></app-form-observacion-informe-final>
 
 </section>
